Switch from GLFW to SDL / Remove OpenVR support / Update LWJGL to latest SNAPSHOT